--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     "@angular/core": "https://esm.sh/@angular/core@^21.1.3?external=rxjs",
     "@angular/compiler": "https://esm.sh/@angular/compiler@^21.1.3?external=rxjs",
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.1.3?external=rxjs",
-    "@angular/common": "https://esm.sh/@angular/common@^21.1.3?external=rxjs"
+    "@angular/common": "https://esm.sh/@angular/common@^21.1.3?external=rxjs",
+    "@angular/forms": "https://esm.sh/@angular/forms@^21.1.3?external=rxjs",
+    "@google/genai": "https://esm.sh/@google/genai?conditions=es2015"
   }
 }
 </script>
